--- a/styles/reg-styles.css
+++ b/styles/reg-styles.css
@@ -5,6 +5,59 @@ body {
 header {
     background-color: #333;
 }
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+.button-container{
+    text-align: center;
+}
+.button {
+    margin-top: 10px;
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+}
+
+.button:hover {
+    background-color: #555;
+}
+.invalid {
+    color: red;
+    font-family: "Book Antiqua", serif;
+}
+
+.radio {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 10px;
+}
+
+input[type="radio"] {
+    margin-right: 5px;
+}
+
+label[for="male"],
+label[for="female"] {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+input[type="radio"]:checked + label {
+    font-weight: bold;
+}
 
 .registration {
     text-align: center;
@@ -150,7 +203,44 @@ header .navbar-nav .nav-item .current {
 
     .footer-custom {
         margin-top: 50px;
+        bottom: 0;
         position: relative;
         width: 100%;
     }
+    table {
+        border: 0;
+    }
+    .table, thead {
+        clip: rect(0 0 0 0);
+        position: absolute;
+    }
+    th, td {
+        display: block;
+        width: 100%;
+        box-sizing: border-box;
+        margin-bottom: 5px;
+    }
+
+    th {
+        background-color: #f2f2f2;
+    }
+
+    .button-container {
+        text-align: center;
+    }
+
+    .button {
+        margin-top: 10px;
+        background-color: #333;
+        color: #fff;
+        padding: 10px 20px;
+        cursor: pointer;
+        border: none;
+        border-radius: 4px;
+    }
+
+    .button:hover {
+        background-color: #555;
+    }
+
 }
